# Claw-wallet

./: .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  GOVERNANCE.md  IMPROVEMENTS.md  OPEN_CORE_STRATEGY.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release-gates.yml
agent-wallet-service/: .env.example  .gitignore  MORNING.md  README.md  ROADMAP.md  SECURITY_BUG_REPORT.md  cli.js  demo.js  package-lock.json  package.json  policies.json  policy-usage.json  sdk.d.ts  sdk.js
agent-wallet-service-dashboard/: package-lock.json  package.json
agent-wallet-service-dashboard/src/: App.jsx
agent-wallet-service-python/: README.md  pyproject.toml
agent-wallet-service-python/claw_wallet/: __init__.py  client.py  websocket_client.py
agent-wallet-service-src/: package.json
agent-wallet-service-src/agent-wallet-service/: package.json
agent-wallet-service/dashboard/: app.js  index.html  styles.css
agent-wallet-service/docs/: adapter-plugins.md  openapi.yaml  rate-limit-migration.md
agent-wallet-service/src/: errors.js  index.d.ts  index.js  mcp-server.js
agent-wallet-service/tests/: run-all-tests.js  run-tests.js  smoke-onboarding.js  test-auth-security.js  test-auth.js  test-error-contract.js  test-metadata-version.js  test-policy.js  test-rate-limit.js  test-sdk.js  test-wallet.js  test-websocket.js
app/: index.html  package-lock.json  tailwind.config.js
app/src/: App.tsx  index.css
docs/: ENGINEERING_PROGRAM_MANAGEMENT.md  NEXT_ACTION_COMMANDS.md
docs/releases/: v0.2.0-rc1.md
reports/: start-testing.md
(+59 files in other folders)
