[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-wallet"
version = "0.2.0"
description = "Stripe for AI Agent Wallets - Python SDK"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mr. Claw", email = "mrclaw@example.com"}
]
keywords = ["wallet", "crypto", "ethereum", "ai", "agent", "blockchain", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
websocket = [
    "websocket-client>=1.6.0",
]
all = [
    "claw-wallet[dev,websocket]",
]

[project.urls]
Homepage = "https://github.com/Vibes-me/Claw-wallet"
Documentation = "https://github.com/Vibes-me/Claw-wallet#readme"
Repository = "https://github.com/Vibes-me/Claw-wallet.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_wallet*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
